--- a/app/views/mytodos/index.html.erb
+++ b/app/views/mytodos/index.html.erb
@@ -3,7 +3,7 @@
     <%= stylesheet_link_tag 'todos_print', :plugin => 'redmine_todos_plugin', :media => 'print' %>
 <% end %>
 
-<div id=project-todos>
+<div id=project-todos class=mytodos>
   <%= render :partial => 'todos/link_bar' %>
   <h3><%= l(:mytodos_heading)%></h3>
   
@@ -18,7 +18,7 @@
 
 </div>
 
-<div id=project-todos>
+<div id=project-todos class=allprojects>
   <% @grouped_project_todos.each do |project, todos| %>
   
     <h3>
