--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 
-<div id=project-todos>
+<div id=project-todos class=mytodos>
   <%= render :partial => 'todos/link_bar' %>
   <h2><%= l(:todos_project_heading) %> <%= @project.name %></h2>
   <div style="" >
